--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/maria2"
+        android:label="@string/張惠芯"
+        android:roundIcon="@drawable/maria2"
         android:supportsRtl="true"
         android:theme="@style/Theme.S1120053"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/張惠芯"
             android:theme="@style/Theme.S1120053">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
